重写wts 删掉屎